# dane-policy-resolver

./: LICENSE.md  README.md  dane-policy-resolver  pyproject.toml
contrib/: dane-policy-resolver.service
dane_policy_resolver/: __init__.py  __main__.py  main.py  resolver.py  server.py
